1.1.1 (not yet released):
- Remove debugging messages.
- Slightly improve the Makefile.

1.1:
- Move the PackageSet.pm Perl module from oscar-base to Selector.
- Include a oscar-selector script that enables the management of package sets.

1.0.4:
- Disable the "Manage Set" button since the base code is not ready to support
such a functionality.

1.0.3:
- Modify the Makefile so we can choose the directory to save sources when
creating RPMs.
- Modify the Makefile so we can choose the directory where the binary packages
are stored.
- Enable the creation of unsigned Debian packages by setting the
UNSIGNED_OSCAR_PKG environment variable.

1.0.2:
- Core packages are now always checked (a bug prevented to do so before).
- Core packages cannot be unchecked (a bug prevented to do so before).

1.0.1:
- Clean up and improve the spec file.
- Ease the creation of RPMs.

1.0:
- Separate Selector from the rest of the OSCAR code.
- Include the specification of Selector capabilities.
- Make the implementation based on the specification.